// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / QuickFilter Default 1`] = `
.c0 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -2px;
  margin-right: -2px;
}

.c5 > * {
  padding-left: 2px;
  padding-right: 2px;
}

.c5 > *:not(:first-child) {
  padding-top: 0;
}

.c6 {
  box-sizing: border-box;
  -webkit-align-self: baseline;
  -ms-flex-item-align: baseline;
  align-self: baseline;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  opacity: 0;
  pointer-events: none;
  position: absolute;
}

.c3 {
  border-radius: 50%;
  box-sizing: border-box;
  display: inline-block;
  background: #F5F5F5;
  color: #212121;
  cursor: pointer;
  padding: 6px;
  padding: 4px 12px;
  border-radius: 16px;
}

.c3:hover {
  color: #6690FF;
}

.c1 {
  cursor: inherit;
}

.c1:focus-within .c2 {
  outline: 2px solid Highlight;
  outline: 2px solid -webkit-focus-ring-color;
}

<div
  className="c0"
>
  <label
    className="c1"
  >
    <div
      className="c2 c3"
      variant="small"
    >
      <input
        checked={false}
        className="c4"
        disabled={false}
        onChange={[Function]}
        type="checkbox"
        value="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent scelerisque dignissim dolor."
      />
      <div
        className="c5"
      >
        <div
          className="c6"
        >
          <span
            className="c7"
          >
            Default
          </span>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots Molecules / QuickFilter With ReactNode 1`] = `
.c0 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -2px;
  margin-right: -2px;
}

.c5 > * {
  padding-left: 2px;
  padding-right: 2px;
}

.c5 > *:not(:first-child) {
  padding-top: 0;
}

.c6 {
  box-sizing: border-box;
  -webkit-align-self: baseline;
  -ms-flex-item-align: baseline;
  align-self: baseline;
}

.c8 {
  box-sizing: border-box;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c4 {
  opacity: 0;
  pointer-events: none;
  position: absolute;
}

.c3 {
  border-radius: 50%;
  box-sizing: border-box;
  display: inline-block;
  background: #F5F5F5;
  color: #212121;
  cursor: pointer;
  padding: 6px;
  padding: 4px 12px;
  border-radius: 16px;
}

.c3:hover {
  color: #6690FF;
}

.c1 {
  cursor: inherit;
}

.c1:focus-within .c2 {
  outline: 2px solid Highlight;
  outline: 2px solid -webkit-focus-ring-color;
}

<div
  className="c0"
>
  <label
    className="c1"
  >
    <div
      className="c2 c3"
      variant="small"
    >
      <input
        checked={false}
        className="c4"
        disabled={false}
        onChange={[Function]}
        type="checkbox"
        value="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent scelerisque dignissim dolor."
      />
      <div
        className="c5"
      >
        <div
          className="c6"
        >
          <span
            className="c7"
          >
            <div
              className="c8"
            >
              <span
                className="c9"
              >
                Title in a flexbox
              </span>
            </div>
          </span>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots Molecules / QuickFilter With controlled behavior 1`] = `
.c0 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -2px;
  margin-right: -2px;
}

.c5 > * {
  padding-left: 2px;
  padding-right: 2px;
}

.c5 > *:not(:first-child) {
  padding-top: 0;
}

.c6 {
  box-sizing: border-box;
  -webkit-align-self: baseline;
  -ms-flex-item-align: baseline;
  align-self: baseline;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  opacity: 0;
  pointer-events: none;
  position: absolute;
}

.c3 {
  border-radius: 50%;
  box-sizing: border-box;
  display: inline-block;
  background: #F5F5F5;
  color: #212121;
  cursor: pointer;
  padding: 6px;
  padding: 4px 12px;
  border-radius: 16px;
}

.c3:hover {
  color: #6690FF;
}

.c1 {
  cursor: inherit;
}

.c1:focus-within .c2 {
  outline: 2px solid Highlight;
  outline: 2px solid -webkit-focus-ring-color;
}

<div
  className="c0"
>
  <label
    className="c1"
  >
    <div
      className="c2 c3"
      variant="small"
    >
      <input
        checked={false}
        className="c4"
        disabled={false}
        onChange={[Function]}
        type="checkbox"
        value="This component is controlled"
      />
      <div
        className="c5"
      >
        <div
          className="c6"
        >
          <span
            className="c7"
          >
            Controlled selection card
          </span>
        </div>
      </div>
    </div>
  </label>
  <button
    onClick={[Function]}
    type="button"
  >
    Selected
  </button>
  <button
    onClick={[Function]}
    type="button"
  >
    Not selected
  </button>
  value: 
  false
</div>
`;

exports[`Storyshots Molecules / QuickFilter With icon 1`] = `
.c0 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -2px;
  margin-right: -2px;
}

.c5 > * {
  padding-left: 2px;
  padding-right: 2px;
}

.c5 > *:not(:first-child) {
  padding-top: 0;
}

.c6 {
  box-sizing: border-box;
}

.c9 {
  box-sizing: border-box;
  -webkit-align-self: baseline;
  -ms-flex-item-align: baseline;
  align-self: baseline;
}

.c8 {
  color: #6E6E69;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  opacity: 0;
  pointer-events: none;
  position: absolute;
}

.c3 {
  border-radius: 50%;
  box-sizing: border-box;
  display: inline-block;
  background: #F5F5F5;
  color: #212121;
  cursor: pointer;
  padding: 6px;
  padding: 4px 12px;
  border-radius: 16px;
}

.c3:hover {
  color: #6690FF;
}

.c1 {
  cursor: inherit;
}

.c1:focus-within .c2 {
  outline: 2px solid Highlight;
  outline: 2px solid -webkit-focus-ring-color;
}

.c7 > * {
  color: inherit;
}

<div
  className="c0"
>
  <label
    className="c1"
  >
    <div
      className="c2 c3"
      variant="small"
    >
      <input
        checked={false}
        className="c4"
        disabled={false}
        onChange={[Function]}
        type="checkbox"
        value="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent scelerisque dignissim dolor."
      />
      <div
        className="c5"
      >
        <div
          className="c6 c7"
        >
          <svg
            aria-hidden="true"
            className="c8"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={16}
          >
            <path
              d="M8 9.5C8.82843 9.5 9.5 8.82843 9.5 8C9.5 7.17157 8.82843 6.5 8 6.5C7.17157 6.5 6.5 7.17157 6.5 8C6.5 8.82843 7.17157 9.5 8 9.5Z"
              fill="currentColor"
            />
            <path
              clipRule="evenodd"
              d="M0 13V3H16V13H0ZM2 5H14V11H2V5Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <div
          className="c9"
        >
          <span
            className="c10"
          >
            With Icon
          </span>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots Molecules / QuickFilter With variants 1`] = `
.c0 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -2px;
  margin-right: -2px;
}

.c5 > * {
  padding-left: 2px;
  padding-right: 2px;
}

.c5 > *:not(:first-child) {
  padding-top: 0;
}

.c6 {
  box-sizing: border-box;
}

.c8 {
  color: #6E6E69;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  opacity: 0;
  pointer-events: none;
  position: absolute;
}

.c3 {
  border-radius: 50%;
  box-sizing: border-box;
  display: inline-block;
  background: #F5F5F5;
  color: #212121;
  cursor: pointer;
  padding: 6px;
}

.c3:hover {
  color: #6690FF;
}

.c9 {
  border-radius: 50%;
  box-sizing: border-box;
  display: inline-block;
  background: #F5F5F5;
  color: #212121;
  cursor: pointer;
  padding: 8px;
}

.c9:hover {
  color: #6690FF;
}

.c1 {
  cursor: inherit;
}

.c1:focus-within .c2 {
  outline: 2px solid Highlight;
  outline: 2px solid -webkit-focus-ring-color;
}

.c7 > * {
  color: inherit;
}

<div
  className="c0"
>
  <label
    className="c1"
  >
    <div
      className="c2 c3"
      variant="small"
    >
      <input
        checked={false}
        className="c4"
        disabled={false}
        onChange={[Function]}
        type="checkbox"
        value="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent scelerisque dignissim dolor."
      />
      <div
        className="c5"
      >
        <div
          className="c6 c7"
        >
          <svg
            aria-hidden="true"
            className="c8"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={16}
          >
            <path
              d="M8 9.5C8.82843 9.5 9.5 8.82843 9.5 8C9.5 7.17157 8.82843 6.5 8 6.5C7.17157 6.5 6.5 7.17157 6.5 8C6.5 8.82843 7.17157 9.5 8 9.5Z"
              fill="currentColor"
            />
            <path
              clipRule="evenodd"
              d="M0 13V3H16V13H0ZM2 5H14V11H2V5Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </label>
  <label
    className="c1"
  >
    <div
      className="c2 c9"
      variant="big"
    >
      <input
        checked={false}
        className="c4"
        disabled={false}
        onChange={[Function]}
        type="checkbox"
        value="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent scelerisque dignissim dolor."
      />
      <div
        className="c5"
      >
        <div
          className="c6 c7"
        >
          <svg
            aria-hidden="true"
            className="c8"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={16}
          >
            <path
              d="M8 9.5C8.82843 9.5 9.5 8.82843 9.5 8C9.5 7.17157 8.82843 6.5 8 6.5C7.17157 6.5 6.5 7.17157 6.5 8C6.5 8.82843 7.17157 9.5 8 9.5Z"
              fill="currentColor"
            />
            <path
              clipRule="evenodd"
              d="M0 13V3H16V13H0ZM2 5H14V11H2V5Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots Molecules / QuickFilter Without label 1`] = `
.c0 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -2px;
  margin-right: -2px;
}

.c5 > * {
  padding-left: 2px;
  padding-right: 2px;
}

.c5 > *:not(:first-child) {
  padding-top: 0;
}

.c6 {
  box-sizing: border-box;
}

.c8 {
  color: #6E6E69;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  opacity: 0;
  pointer-events: none;
  position: absolute;
}

.c3 {
  border-radius: 50%;
  box-sizing: border-box;
  display: inline-block;
  background: #F5F5F5;
  color: #212121;
  cursor: pointer;
  padding: 6px;
}

.c3:hover {
  color: #6690FF;
}

.c1 {
  cursor: inherit;
}

.c1:focus-within .c2 {
  outline: 2px solid Highlight;
  outline: 2px solid -webkit-focus-ring-color;
}

.c7 > * {
  color: inherit;
}

<div
  className="c0"
>
  <label
    className="c1"
  >
    <div
      className="c2 c3"
      variant="small"
    >
      <input
        checked={false}
        className="c4"
        disabled={false}
        onChange={[Function]}
        type="checkbox"
        value="This component is not controlled"
      />
      <div
        className="c5"
      >
        <div
          className="c6 c7"
        >
          <svg
            aria-hidden="true"
            className="c8"
            focusable="false"
            height={24}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={24}
          >
            <path
              d="M17 1H1v22h2V3h12v20h2V11h4v12h2V9h-6V1Z"
              fill="currentColor"
            />
            <path
              d="M8 21c0-.5523.44772-1 1-1s1 .4477 1 1v2h2v-2c0-1.6569-1.3431-3-3-3-1.65685 0-3 1.3431-3 3v2h2v-2Zm12-7h-2v-2h2v2Zm0 4h-2v-2h2v2Zm0 4h-2v-2h2v2ZM6 5H4v2h2V5ZM4 9h2v2H4V9Zm2 4H4v2h2v-2Zm2-8h2v2H8V5Zm2 4H8v2h2V9Zm-2 4h2v2H8v-2Zm6-8h-2v2h2V5Zm-2 4h2v2h-2V9Zm2 4h-2v2h2v-2Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
  </label>
</div>
`;
